bdr.BDR2.scala.error
Erreur de compilation :
BDR2:3: error: not found: value ==
  case m == "R"  => droite();avance()
         ^BDR2:4: error: not found: value ==
  case m == "L"  => gauche();avance()
         ^BDR2:5: error: not found: value ==
  case m == "I"  => gauche();gauche();avance()
         ^BDR2:6: error: not found: value ==
  case m == "A"  => avance()
         ^BDR2:7: error: not found: value ==
  case m == "B"  => avance();avance()
         ^BDR2:8: error: not found: value ==
  case m == "C"  => avance();avance();avance()
         ^BDR2:9: error: not found: value ==
  case m == "D"  => avance();avance();avance();avance()
         ^BDR2:10: error: not found: value ==
  case m == "E"  => avance();avance();avance();avance();avance()
         ^BDR2:11: error: not found: value ==
  case m == "F"  => avance();avance();avance();avance();avance();avance()
         ^BDR2:12: error: not found: value ==
  case m == "Z"  => recule()
         ^BDR2:13: error: not found: value ==
  case m == "Y"  => recule();recule()
         ^BDR2:14: error: not found: value ==
  case m == "X"  => recule();recule();recule()
         ^BDR2:15: error: not found: value ==
  case m == "W"  => recule();recule();recule();recule()
         ^BDR2:16: error: not found: value ==
  case m == "V"  => recule();recule();recule();recule();recule()
         ^BDR2:17: error: not found: value ==
  case m == "U"  => recule();recule();recule();recule();recule();recule()
         ^