bdr.BDR2.scala.code
var m = litMessage()
m match {
  case m == "R"  => droite();avance()
  case m == "L"  => gauche();avance()
  case m == "I"  => gauche();gauche();avance()
  case m == "A"  => avance()
  case m == "B"  => avance();avance()
  case m == "C"  => avance();avance();avance()
  case m == "D"  => avance();avance();avance();avance()
  case m == "E"  => avance();avance();avance();avance();avance()
  case m == "F"  => avance();avance();avance();avance();avance();avance()
  case m == "Z"  => recule()
  case m == "Y"  => recule();recule()
  case m == "X"  => recule();recule();recule()
  case m == "W"  => recule();recule();recule();recule()
  case m == "V"  => recule();recule();recule();recule();recule()
  case m == "U"  => recule();recule();recule();recule();recule();recule()
}
